--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RustDesk Custom Client Builder</title>
+    <title>自定义客户端构建器</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
@@ -253,7 +253,7 @@
             </ul>
         {% endif %}
         <div class="platform">
-            <h2><i class="fas fa-desktop"></i> Select Platform</h2>
+            <h2><i class="fas fa-desktop"></i>选择平台</h2>
                 <div class="platform-icons">
                     <span class="fa-stack fa-lg">
                         <i class="fab fa-windows  fa-stack-2x platform-icon active" data-platform="windows"></i>
@@ -274,130 +274,127 @@
                     <option value="android">Android</option>
                     <option value="macos">macOS</option>
                 </select>
-                <label for="{{ form.version.id_for_label }}">Rustdesk Version:</label>
+                <label for="{{ form.version.id_for_label }}">版本:</label>
                 {{ form.version }}
                 {% if form.version.help_text %}
                     <span class="help-text">{{ form.version.help_text }}</span>
                 {% endif %}
                 <div class="help-text">{{ form.version.help_text }}</div>
-                <label for="{{ form.delayFix.id_for_label }}">{{ form.delayFix }} Fix connection delay when using third-party API</label>
+                <label for="{{ form.delayFix.id_for_label }}">{{ form.delayFix }} 修复使用第三方 API 时的连接延迟</label>
             </div>
         </div>
         <div class="container">   
             <div class="section">
-                <h2><i class="fas fa-sliders-h"></i> General</h2>
-                    <label for="{{ form.exename.id_for_label }}">Name of the configuration (no spaces or special characters, English characters only):</label>
+                <h2><i class="fas fa-sliders-h"></i> 通用</h2>
+                    <label for="{{ form.exename.id_for_label }}">配置名称(不允许空格或特殊字符，仅限英文字符):</label>
                     {{ form.exename }}<span id="filenameError" class="error"></span><br><br>
-                    <label for="{{ form.appname.id_for_label }}">Custom Application Name (leave blank to use default):</label>
+                    <label for="{{ form.appname.id_for_label }}">自定义应用程序名称(留空使用默认值):</label>
                     {{ form.appname }}<br><br>
-                    <label for="{{ form.direction.id_for_label }}">Connection Type:</label>
+                    <label for="{{ form.direction.id_for_label }}">客户端类型:</label>
                     {{ form.direction }}<br><br>
-                    <label for="{{ form.installation.id_for_label }}">Disable Installation:</label>
+                    <label for="{{ form.installation.id_for_label }}">禁用安装:</label>
                     {{ form.installation }}<br><br>
-                    <label for="{{ form.settings.id_for_label }}">Disable Settings:</label>
+                    <label for="{{ form.settings.id_for_label }}">禁用设置:</label>
                     {{ form.settings }}<br><br>
             </div>
 
             <div class="section">
-                <h2><i class="fas fa-server"></i> Custom Server</h2>
+                <h2><i class="fas fa-server"></i> 配置服务器</h2>
                     <label for="{{ form.serverIP.id_for_label }}">Host:</label>
                     {{ form.serverIP }}<br><br>
                     <label for="{{ form.key.id_for_label }}">Key:</label>
                     {{ form.key }}<br><br>
                     <label for="{{ form.apiServer.id_for_label }}">API:</label>
                     {{ form.apiServer }}<br><br>
-                    <label for="{{ form.urlLink.id_for_label }}">Custom URL for links (replaces https://rustdesk.com):</label>
+                    <label for="{{ form.urlLink.id_for_label }}">门户网站:</label>
                     {{ form.urlLink }}<br><br>
-                    <label for="{{ form.downloadLink.id_for_label }}">Custom URL for downloading updates (replaces https://rustdesk.com/download):</label>
+                    <label for="{{ form.downloadLink.id_for_label }}">下载更新链接:</label>
                     {{ form.downloadLink }}<br><br>
-                    <label for="{{ form.compname.id_for_label }}">Company name for copyright (replaces Purslane Ltd):</label>
+                    <label for="{{ form.compname.id_for_label }}">版权所属:</label>
                     {{ form.compname }}<br><br>
             </div>
         </div>
         <div class="container">
             <div class="section">
-                <h2><i class="fas fa-shield-alt"></i> Security</h2>
-                    <label for="{{ form.passApproveMode.id_for_label }}">Password Approve mode:</label>
+                <h2><i class="fas fa-shield-alt"></i> 安全 </h2>
+                    <label for="{{ form.passApproveMode.id_for_label }}">认证方式:</label>
                     {{ form.passApproveMode }}<br><br>
-                    <div id="passwordRequirement" class="password-requirement">To use the hide connection window feature, please set a permanent password.</div>
-                    <label for="{{ form.permanentPassword.id_for_label }}">Set Permanent Password:</label>
-                    {{ form.permanentPassword }} *The password is used as default, but can be changed by the client<br><br>
+                    <div id="passwordRequirement" class="password-requirement">要使用隐藏连接窗口功能，请设置永久密码.</div>
+                    <label for="{{ form.permanentPassword.id_for_label }}">设置永久密码:</label>
+                    {{ form.permanentPassword }} *密码作为默认设置，但客户端可以更改<br><br>
                     
                     
-                    <label for="{{ form.denyLan.id_for_label }}">{{ form.denyLan }} Deny LAN discovery</label><br>
+                    <label for="{{ form.denyLan.id_for_label }}">{{ form.denyLan }}拒绝局域网发现</label><br>
                     
-                    <label for="{{ form.enableDirectIP.id_for_label }}">{{ form.enableDirectIP }} Enable direct IP access</label><br>
+                    <label for="{{ form.enableDirectIP.id_for_label }}">{{ form.enableDirectIP }} 启用直接 IP 访问</label><br>
                     
-                    <label for="{{ form.autoClose.id_for_label }}">{{ form.autoClose }} Automatically close incoming sessions on user inactivity</label><br>
+                    <label for="{{ form.autoClose.id_for_label }}">{{ form.autoClose }} 在用户不活动时自动关闭传入的会话</label><br>
 
-                    <label for="{{ form.hidecm.id_for_label }}">{{ form.hidecm }} Allow hiding the connection window from remote screen.</label><br>
+                    <label for="{{ form.hidecm.id_for_label }}">{{ form.hidecm }} 允许从远程屏幕隐藏连接窗口.</label><br>
             </div>
         
             <div class="section">
-                <h2><i class="fas fa-paint-brush"></i> Visual</h2>
+                <h2><i class="fas fa-paint-brush"></i> 外观</h2>
                     {{ form.iconbase64.as_hidden }}
                     {{ form.logobase64.as_hidden }}
-                    <label for="{{ form.iconfile.id_for_label }}">Custom App Icon (in .png format)</label>
+                    <label for="{{ form.iconfile.id_for_label }}">应用图标 (in .png format)</label>
                     {{ form.iconfile }}<br><br>
                     <!-- <input type="file" name="iconfile" id="iconfile" accept="image/png"> -->
                     <div id="icon-preview"></div><br><br>
-                    <label for="{{ form.logofile.id_for_label }}">Custom App Logo (in .png format)</label>
+                    <label for="{{ form.logofile.id_for_label }}">应用标志 (in .png format)</label>
                     {{ form.logofile }}<br><br>
                     <!-- <input type="file" name="logofile" id="logofile" accept="image/png"> -->
                     <div id="logo-preview"></div><br><br>
-                    <label for="{{ form.theme.id_for_label }}">Theme:</label>
-                    {{ form.theme }} {{ form.themeDorO }} *Default sets the theme but allows the client to change it, Override sets the theme permanently.<br><br>
+                    <label for="{{ form.theme.id_for_label }}">主题:</label>
+                    {{ form.theme }} {{ form.themeDorO }}
+                    <div class="help-text">
+                            *默认设置:允许客户更改<br>
+                            *固化设置：不允许客户更改
             </div>
         </div>
         <div class="container">
             <div class="section">
-                <h2><i class="fas fa-lock"></i> Permissions</h2>
-                    The following Permissions can be set as default (the user can change the settings) or override (the settings cannot be changed).<br>
+                <h2><i class="fas fa-lock"></i> 权限</h2>
+                    以下权限可以设置为默认（用户可以更改设置）或固化（设置不能更改）.<br>
                     {{ form.permissionsDorO }}
-                    <label for="{{ form.permissionsType.id_for_label }}">Permission type:</label>
+                    <label for="{{ form.permissionsType.id_for_label }}">权限类型:</label>
                     {{ form.permissionsType }}<br><br>
                     <div class="checkbox-group">
-                        <label for="{{ form.enableKeyboard.id_for_label }}">{{ form.enableKeyboard }} Enable keyboard/mouse</label>
-                        <label for="{{ form.enableClipboard.id_for_label }}">{{ form.enableClipboard }} Enable clipboard</label>
-                        <label for="{{ form.enableFileTransfer.id_for_label }}">{{ form.enableFileTransfer }} Enable file transfer</label>
-                        <label for="{{ form.enableAudio.id_for_label }}">{{ form.enableAudio }} Enable audio</label>
-                        <label for="{{ form.enableTCP.id_for_label }}">{{ form.enableTCP }} Enable TCP tunneling</label>
-                        <label for="{{ form.enableRemoteRestart.id_for_label }}">{{ form.enableRemoteRestart }} Enable remote restart</label>
-                        <label for="{{ form.enableRecording.id_for_label }}">{{ form.enableRecording }} Enable recording session</label>
-                        <label for="{{ form.enableBlockingInput.id_for_label }}">{{ form.enableBlockingInput }} Enable blocking user input</label>
-                        <label for="{{ form.enableRemoteModi.id_for_label }}">{{ form.enableRemoteModi }} Enable remote configuration modification</label>
-                        <label for="{{ form.enablePrinter.id_for_label }}">{{ form.enablePrinter }} Enable remote printer</label>
-                        <label for="{{ form.enableCamera.id_for_label }}">{{ form.enableCamera }} Enable remote camera</label>
-                        <label for="{{ form.enableTerminal.id_for_label }}">{{ form.enableTerminal }} Enable remote terminal</label>
+                        <label for="{{ form.enableKeyboard.id_for_label }}">{{ form.enableKeyboard }} 启用键盘/鼠标</label>
+                        <label for="{{ form.enableClipboard.id_for_label }}">{{ form.enableClipboard }} 启用剪贴板</label>
+                        <label for="{{ form.enableFileTransfer.id_for_label }}">{{ form.enableFileTransfer }} 启用文件传输</label>
+                        <label for="{{ form.enableAudio.id_for_label }}">{{ form.enableAudio }} 启用音频</label>
+                        <label for="{{ form.enableTCP.id_for_label }}">{{ form.enableTCP }} 启用 TCP 隧道</label>
+                        <label for="{{ form.enableRemoteRestart.id_for_label }}">{{ form.enableRemoteRestart }} 启用远程重启</label>
+                        <label for="{{ form.enableRecording.id_for_label }}">{{ form.enableRecording }} 启用录制会话</label>
+                        <label for="{{ form.enableBlockingInput.id_for_label }}">{{ form.enableBlockingInput }} 启用阻止用户输入</label>
+                        <label for="{{ form.enableRemoteModi.id_for_label }}">{{ form.enableRemoteModi }} 启用远程配置修改</label>
+                        <label for="{{ form.enablePrinter.id_for_label }}">{{ form.enablePrinter }} 启用远程打印机</label>
+                        <label for="{{ form.enableCamera.id_for_label }}">{{ form.enableCamera }} 启用远程摄像头</label>
+                        <label for="{{ form.enableTerminal.id_for_label }}">{{ form.enableTerminal }} 启用远程终端</label>
                     </div><br>
-                <h2><i class="fas fa-code"></i> Code Changes</h2>
-                    <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} Add a button to cycle through available monitors to the minimized toolbar.</label><br>
-                    <label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} Display an X for offline devices in the addressbook.</label><br>
-                    <label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} Remove notification for new versions.</label><br>
+                <h2><i class="fas fa-code"></i> 附加配置 </h2>
+                    <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 在最小化的工具栏中添加一个按钮以循环切换可用的显示器</label><br>
+                    <label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} 在通讯录中为离线设备显示一个X </label><br>
+                    <label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} 移除新版本通知 </label><br>
             </div>
 
             <div class="section">
-                <h2><i class="fas fa-cog"></i> Other</h2>
-                    <label for="{{ form.removeWallpaper.id_for_label }}">{{ form.removeWallpaper }} Remove wallpaper during incoming sessions</label><br>
-                    <a href="https://rustdesk.com/docs/en/self-host/client-configuration/advanced-settings/">Click here for a list of Default/Override settings</a>
-                    <label for="{{ form.defaultManual.id_for_label }}">Default settings</label><br>
+                <h2><i class="fas fa-cog"></i> 官方设置 </h2>
+                    <label for="{{ form.removeWallpaper.id_for_label }}">{{ form.removeWallpaper }} 在接收会话期间移除壁纸</label><br>
+                    <a href="https://rustdesk.com/docs/en/self-host/client-configuration/advanced-settings/"
+                    target="_blank"
+                    rel="noopener noreferrer" >点击此处查看可用的设置列表</a>
+                    <label for="{{ form.defaultManual.id_for_label }}"> 默认设置 </label><br>
                     {{ form.defaultManual }}<br><br>
-                    <label for="{{ form.overrideManual.id_for_label }}">Override settings</label><br>
+                    <label for="{{ form.overrideManual.id_for_label }}"> 固化设置 </label><br>
                     {{ form.overrideManual }}<br><br>
             </div>
         </div>
-        <div class="platform">
+        <div class="platform" style="text-align: center; margin: 30px 0;">
             <div class="section">
-                <button type="submit"><i class="fas fa-rocket"></i> Generate Custom Client</button>
+                <button type="submit"><i class="fas fa-rocket"></i> 构建客户端</button>
             </div>
-        </div>
-        <div style="text-align: center; margin: 30px 0;">
-            <a href="https://github.com/bryangerlach/rdgen" 
-            target="_blank" 
-            class="sponsor-button">
-                <i class="fab fa-github"></i>
-                Source Code on Github
-            </a>
         </div>
         <div style="text-align: center; margin: 30px 0;">
             <a href="https://github.com/sponsors/bryangerlach?o=esb"
