--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -237,10 +237,11 @@
     <form id="myForm" action="/generator" method="post" enctype="multipart/form-data">
         <div class="save-load-section-container">
             <div class="section">
-                <<h  i==saveeLoadTitle> 保存/加载配置 <i class==eLoadTitle> 保存 <i class==eLoadTitle> bao'cu <i class==eLoss="save-load-section">  
-                    <button type="button" onclick="saveFormData()">Save Configuration</button>
+                <h2 id="saveLoadTitle"> 保存/加载配置 <i class="fas fa-chevron-down"></i></h2>  
+                <div class="save-load-section">  
+                    <button type="button" onclick="saveFormData()"> 保存配置 </button>
                     <input type="file" id="fileInput" style="display:none;" accept=".json">
-                    <button type="button" onclick="loadFormData()">Load Configuration</button>
+                    <button type="button" onclick="loadFormData()"> 加载配置 </button>
                 </div>
             </div>
         </div>
